<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activityPadding">

    <CheckBox
        android:id="@+id/rerollOnesCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rerollOnesCheckBox"/>

    <CheckBox
        android:id="@+id/dropLowestCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dropLowestCheckBox"/>

    <CheckBox
        android:id="@+id/highlightMinMaxCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highlightMinMaxCheckBox"/>

    <CheckBox
        android:id="@+id/sortRollsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortRollsCheckBox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activityMargin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/activityPadding"
            android:text="@string/chooseColor"
            android:textAlignment="center"/>

        <GridView
            android:id="@+id/colorGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:columnWidth="@dimen/columnWidth"
            android:horizontalSpacing="@dimen/columnSpacing"
            android:numColumns="5"
            android:verticalSpacing="@dimen/columnSpacing"/>

    </LinearLayout>

    <Button
        android:id="@+id/deleteDialogOptionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/deleteOptionDialogButton"/>

</LinearLayout>